AbstractSimpleEntrySet: Changed get(0) to getFirst()